.tanzu/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cloudplatformdemo-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: cloudplatformdemo
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: https-cloudplatformdemo
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: cloudplatformdemo
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
